# Lab3OS-Threads2

./: .gitignore  Lab3OS-Threads2.sln  syncronization.cpp  test.cpp
Lab3OS-Threads2Cmake/: CMakeLists.txt  marker.cpp  test.cpp
Threads2/: arrays.cpp  arrays.h  head.h  marker.cpp  marker.h  syncronization.cpp
